appId: com.overcomers.globalnetwork.app
---
- launchApp
- assertVisible: "Get Started"
- tapOn: "Get Started"
- assertVisible: "Sign In"
